Add new notification types; WS api docs